Add google logo and input text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        
+        <img src="google_logo.png">
+        <input type="text">
     </body>
     </html>
