--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img src="google_logo.png">
-        <input type="text">
+        <div>
+            <img src="google_logo.png">
+            <input type="text">
+        </div>
+        
     </body>
     </html>
