--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div>
-            <img src="google_logo.png">
-            <input type="text">
+        <div class="main">
+            <img class="logo" src="google_logo.png">
+            <input class="search-bar" type="text">
         </div>
         
     </body>
