Add google search button and centre it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="main">
             <img class="logo" src="google_logo.png">
             <input class="search-bar" type="text">
+            <button class="btn">Google search</button>
         </div>
-        
     </body>
     </html>
