--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <div class="main">
             <img class="logo" src="google_logo.png">
             <input class="search-bar" type="text">
-            <button class="btn">Google search</button>
+            <button class="btn-search">Google Search</button>
+            <button class="btn-lucky">I'm Feeling Lucky</button>
         </div>
     </body>
     </html>
