--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <div class="main">
             <img class="logo" src="google_logo.png">
             <input class="search-bar" type="text">
-            <button class="btn-search">Google Search</button>
-            <button class="btn-lucky">I'm Feeling Lucky</button>
+            <div class="btn-wrapper">
+                <button class="btn-search">Google Search</button>
+                <button class="btn-lucky">I'm Feeling Lucky</button>
+            </div>
         </div>
     </body>
     </html>
