--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <img class="logo" src="google_logo.png">
             <input class="search-bar" type="text">
             <div class="btn-wrapper">
-                <button class="btn-search">Google Search</button>
-                <button class="btn-lucky">I'm Feeling Lucky</button>
+                <button class="btn">Google Search</button>
+                <button class="btn">I'm Feeling Lucky</button>
             </div>
         </div>
     </body>
